@@ -1,3 +1,6 @@
+* Sat Mar 17 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.1-0
+- Updated to work with Puppet 5 and OEL
+
 * Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
 - Update upperbound on puppetlabs/concat version to < 5.0.0
 - Fix trivial string lint issue
